Fix a variety of TypeScript errors.
--------------------------------------------------
Version:   Vue3-Start-V2
--------------------------------------------------

Change Summary
--------------
Check <title> to match the project name.
Enable Emit in Compiler Options.
Correct TS Error related to inject(~) command.
Rename misc consts to make them more consistent.
Discard only comments and debug code.

--------------------------------------------------
modified:   tsconfig.app.json
modified:   tsconfig.json
modified:   tsconfig.node.json
modified:   index.html

modified:   src/   App.vue
modified:   src/   main.ts
modified:   src/   views/   DevView.vue
modified:   src/   views/   HomeView.vue
--------------------------------------------------

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,8 @@
 			"@/*": ["./src/*"],
 		},
 
-		//	ADD 11/28/23
-		"noEmit" : true,
-		// "noEmit": false,
+		//	DISABLED 2/21/24
+		// "noEmit" : true,
 		"noUnusedLocals" : false,
 		"noImplicitAny": false,
 		"noUnusedParameters": false,
