--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,8 @@
     "composite": true,
    //  "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
-	 "noEmit": true,
+	 // Disabled 2/21/24
+	 // "noEmit": true,
 
     "baseUrl": ".",
     "paths": {
