--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,8 +8,8 @@
 //     "playwright.config.*"
 //   ],
   "compilerOptions": {
-    "composite": true,
-    "noEmit": true,
+   	"composite": true,
+		// "noEmit": false,	// DISABLED 2/25/24
    //  "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
     "module": "ESNext",
